<resources>
    <string name="app_name">Vigor</string>
    <string name="action_settings">Settings</string>
    <string name="vigor">vigor</string>
    <string name="remove">Remove</string>
    <string name="exercise">exercise</string>
    <string name="deleteall">Delete All</string>
    <string name="reps">reps</string>
    <string name="sets">sets</string>
    <string name="add">Add</string>
    <string name="addexercise">Add Exercise</string>
    <string name="finishworkout">Finish Workout</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="data">Data</string>
    <string name="save">save</string>
    <string name="channel_name">vigorchan</string>
    <string name="channel_description">Vigor workout notifier</string>
    <string name="notifications">Notifications</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="subtitle">Bodyweight Training</string>
    <string name="commit">COMMIT TO HEALTH</string>
    <string name="workoutname">Enter the work out name</string>
    <string name="workoutnametitle">Workout Name</string>
    <string name="submit">submit</string>

</resources>
