<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/new_work_fragment"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:background="@drawable/dialog_frag_style"
    tools:context=".NewWorkOutFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/vigorBlue"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/vigorBlue"
            android:text="@string/addexercise"
            android:textSize="@dimen/titleText"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:layout_weight="0"
            android:src="@drawable/ic_fitness_center_black_24dp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/exerciseNameEditText"
        android:layout_width="240dp"
        android:singleLine="true"
        android:inputType="text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:hint="@string/exercise"
        android:textSize="@dimen/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

    <android.support.design.widget.TextInputEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/exerciseSets"
        android:layout_width="240dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/sets"
        android:textSize="@dimen/titleText"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseNameEditText" />

    <android.support.design.widget.TextInputEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/exerciseReps"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/reps"
        android:textSize="@dimen/titleText"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseSets" />



    <android.support.v7.widget.AppCompatButton
        android:id="@+id/materialButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add"
        android:background="@color/vigorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseReps" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton">

    </ListView>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/finishworkout"
        android:id="@+id/finishworkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/vigorBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />


</android.support.constraint.ConstraintLayout>